--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="usersTable"></div>  
-  <button class="link"><a href="http://mock-api.shpp.me/ahudzovskyi/users" target="_blank">
+  <button class="link"><a href="https://mock-api.shpp.me/ahudzovskyi/users" target="_blank">
     Link to the backend</a></button>
   <script src="./js/app.js"></script>
 </body>
